# embarrassingly-parrallel-thermoraw

./: Dockerfile
.github/workflows/: ci.yml
thermorawfilereader/: Cargo.toml
thermorawfilereader/benches/: scan_extraction.rs
thermorawfilereader/examples/: parallel_demo.rs
thermorawfilereader/src/: lib.rs  parallel.rs  wrap.rs
