[package]
name = "thermorawfilereader"
version = "0.6.0"
edition = "2021"

description = "A (relatively) high level interface to Thermo Fisher's RawFileReader library"
license = "Apache-2.0"

repository = "https://github.com/mobiusklein/thermorawfilereader.rs.git"
documentation = "https://docs.rs/thermorawfilereader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name="fficheck"
path="src/bin.rs"

[[example]]
name = "with_threads"

[[bench]]
name = "scan_extraction"
harness = false

[features]

default = ["nethost-download", "net8_0"]

nethost-download = ["dotnetrawfilereader-sys/nethost-download"]
doc-only = ["dotnetrawfilereader-sys/doc-only"]
net8_0 = ["netcorehost/net8_0", "dotnetrawfilereader-sys/net8_0"]
netcorehost-latest = ["netcorehost/latest", "dotnetrawfilereader-sys/netcorehost-latest"]

# High-performance parallel iteration features
rayon = ["dep:rayon"]
tokio = ["dep:tokio", "dep:futures-core"]
async = ["tokio"]


[dependencies]
flatbuffers = "25.2.10"
netcorehost = { version = "0.18.0", default-features = false, features = [
    "nethost"
]}

dotnetrawfilereader-sys = { version = "0.6.0", path = "../dotnetrawfilereader-sys/", default-features = false}
bytemuck = "1.18.0"

# Optional dependencies for parallel iteration
rayon = { version = "1.10", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"], optional = true }
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
rayon = { version = "1.10" }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full", "test-util"] }
futures = "0.3"

[package.metadata.docs.rs]
no-default-features = true
features = ["doc-only"]
